--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@400;800&display=swap");
 
+/* Variables for color */
 :root {
   --mainbg: #080708;
   --appbg: #1f2937;
