Moved item lists from App to own components and performed final refactor

--- a/public/styles.css
+++ b/public/styles.css
@@ -25,6 +25,8 @@ body {
 #lists {
   padding: 20px;
   background-color: var(--appbg);
+  justify-content: center;
+  align-content: center;
 }
 
 .list {
